complete Polish translation

--- a/locale/pl/django.po
+++ b/locale/pl/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-01-29 17:32+0100\n"
+"POT-Creation-Date: 2023-01-20 20:35+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,12 +29,20 @@ msgid "No"
 msgstr "Nie"
 
 #: .\mindgame\models.py:56
+#, fuzzy
+#| msgid ""
+#| "0 correct predictions - your contribution is 15 Zloty, you earn extra 0 "
+#| "Zloty ( + your show-up fee)"
 msgid ""
 "0 correct predictions - your contribution is 15 Zloty, you earn extra 0 Zloty"
 msgstr ""
 "0 poprawnych przewidywań - Twój wkład to 15 zł., zarabiasz dodatkowo 0 zł. "
 
 #: .\mindgame\models.py:57
+#, fuzzy
+#| msgid ""
+#| "1 correct predictions - your contribution is 14 Zloty , you earn extra 1 "
+#| "Zloty (+ your show-up fee)"
 msgid ""
 "1 correct predictions - your contribution is 14 Zloty , you earn extra 1 "
 "Zloty"
@@ -42,13 +50,22 @@ msgstr ""
 "1 poprawne przewidywanie - Twój wkład to 14 zł, zarabiasz dodatkowo 1 zł. "
 
 #: .\mindgame\models.py:58
+#, fuzzy
+#| msgid ""
+#| "2 correct predictions - your contribution is 13 Zloty , you earn extra 2 "
+#| "Zloty (+ your show-up fee)"
 msgid ""
 "2 correct predictions - your contribution is 13 Zloty , you earn extra 2 "
 "Zloty"
 msgstr ""
 "2 poprawne przewidywania - Twój wkład to 13 zł, zarabiasz dodatkowo 2 zł. "
 
+
 #: .\mindgame\models.py:59
+#, fuzzy
+#| msgid ""
+#| "3 correct predictions - your contribution is 12 Zloty , you earn extra 3 "
+#| "Zloty (+ your show-up fee)"
 msgid ""
 "3 correct predictions - your contribution is 12 Zloty , you earn extra 3 "
 "Zloty"
@@ -56,6 +73,10 @@ msgstr ""
 "3 poprawne przewidywania - Twój wkład to 12 zł, zarabiasz dodatkowo 3 zł. "
 
 #: .\mindgame\models.py:60
+#, fuzzy
+#| msgid ""
+#| "4 correct predictions - your contribution is 11 Zloty , you earn extra 4 "
+#| "Zloty (+ your show-up fee)"
 msgid ""
 "4 correct predictions - your contribution is 11 Zloty , you earn extra 4 "
 "Zloty"
@@ -63,6 +84,10 @@ msgstr ""
 "4 poprawne przewidywania - Twój wkład to 11 zł, zarabiasz dodatkowo 4 zł. "
 
 #: .\mindgame\models.py:61
+#, fuzzy
+#| msgid ""
+#| "5 correct predictions - your contribution is 10 Zloty , you earn extra 5 "
+#| "Zloty (+ your show-up fee)"
 msgid ""
 "5 correct predictions - your contribution is 10 Zloty , you earn extra 5 "
 "Zloty"
@@ -405,6 +430,10 @@ msgstr "Szkoła Doktroska"
 msgid "Others"
 msgstr "Inne"
 
+#: .\presurvey\models.py:85
+msgid "What is your study program"
+msgstr "Wskaż fakultet studiów"
+
 #: .\presurvey\models.py:86
 msgid "Did you vote in the last election for the student council?"
 msgstr "Czy głosowałeś w ostatnich wyborach do Parlamentu Studenckiego"
@@ -454,6 +483,31 @@ msgid "Welcome"
 msgstr "Witam"
 
 #: .\presurvey\templates\presurvey\aWelcome.html:10
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "        Today, we invite you to take part in an economic experiment. The "
+#| "experiment is part of a research\n"
+#| "        project of doctoral students at the Poznan University of "
+#| "Economics and Business. In total,\n"
+#| "        approximately 500-600 students will participate. All sessions "
+#| "will take place in December 2022.<br>\n"
+#| "\n"
+#| "        <br>By participating in this experiment, you support their "
+#| "research.<br>\n"
+#| "\n"
+#| "        The experiment will take about <b>20 minutes</b>.<br>\n"
+#| "        Every participant who takes part and answers all questions "
+#| "receives a <b>show-up fee of 5 Zloty</b>.<br>\n"
+#| "        In addition, there is the <b>chance to earn another 5 Zloty</b> "
+#| "during the experiment.<br>\n"
+#| "        The outcome of the experiment has an impact on the study "
+#| "conditions at the Poznan University of\n"
+#| "        Economics and Business.<br>\n"
+#| "\n"
+#| "        <br><strong>Please do not talk to your fellow students during the "
+#| "experiment.</strong>\n"
+#| "    "
 msgid ""
 "\n"
 "        Today, we invite you to take part in an economic experiment. The "
@@ -546,6 +600,40 @@ msgid "Hypothetical exercise"
 msgstr "Ćwiczenie hipotetyczne"
 
 #: .\presurvey\templates\presurvey\dHypoEx1.html:10
+#, fuzzy, python-format
+#| msgid ""
+#| "\n"
+#| "        Assume that the university provided every student at Poznan "
+#| "University of Economics and Business with 15 Zloty.\n"
+#| "        This money is earmarked for improving study conditions at this "
+#| "university.\n"
+#| "        It can be spent on the following options:<br>\n"
+#| "    <br>\n"
+#| "    (I)     A series of presentations by well-known entrepreneurs, among "
+#| "them Marek Zmysłowski,\n"
+#| "            Polish-born entrepreneur and co-founder of Rocket Internet, "
+#| "RTB House, OLX and GLOVO and author of\n"
+#| "            the bestseller \"Chasing Black Unicorns.\"<br><br>\n"
+#| "    (II)    Access to a collection of important standard textbooks as "
+#| "ebooks accessible to all\n"
+#| "            students when logged in to the university WiFi. <br><br>\n"
+#| "    (III)   A number of scholarships (600-800 Zloty per student) for "
+#| "study abroad or internship\n"
+#| "            abroad outside of funded programs (so-called free mover)."
+#| "<br><br>\n"
+#| "    (IV)\tFinancial support of selected Study Circles to support their "
+#| "activities,\n"
+#| "            among others publications and conferences. <br><br>\n"
+#| "\n"
+#| "<br><b>How should this money be distributed (in percentage?)</b><br>\n"
+#| "\n"
+#| "    <br>Please note that your answer is purely hypothetical. It does not "
+#| "have any real-life consequences.<br>\n"
+#| "\n"
+#| "    <br>Please make sure that all of the options below add up to 100.\n"
+#| "You only need to fill in the number <b>without</b> the percentage sign "
+#| "\"%%\".\n"
+#| "    "
 msgid ""
 "\n"
 "        Assume that the university provided every student at PUEB with 15 "
@@ -579,13 +667,14 @@ msgstr ""
 "uczelni. \n"
 "        Można je wydać na następujące opcje:<br>\n"
 "    <br>\n"
-"    (I)     Seria prezentacji znanych polskich przedsiębiorców\n"
-"    (II)    Dostęp online do kolekcji ważnych standardowych podręczników w "
-"formie e-booków przez uniwersyteckie WiFi. <br><br>\n"
+"    (I)     Seria prezentacji znanych polskich przedsiębiorców"
+"\n"
+"    (II)    Dostęp online do kolekcji ważnych standardowych podręczników w formie e-"
+"booków przez uniwersyteckie WiFi. <br><br>\n"
 "    (III)   Szereg stypendiów (600-800 zł na studenta) na studia lub "
 "praktyki zagraniczne <br><br>\n"
-"    (IV)  \tWsparcie finansowe dla kół naukowych na Uniwersytecie "
-"Ekonomicznym w Poznaniu\n"
+"    (IV)  \tWsparcie finansowe dla kół naukowych na Uniwersytecie Ekonomicznym w Poznaniu"
+"\n"
 "           <br><br>\n"
 "\n"
 "<br><b>Jak w Twojej ocenie te pieniądze powinny być dystrybuowane pomiędzy "
@@ -598,6 +687,7 @@ msgstr ""
 "sumie dawała 100.\n"
 "Musisz uzupełnić jedynie liczbę <b>BEZ</b> znaku procentów \"%%\".\n"
 "    "
+
 
 #: .\presurvey\templates\presurvey\fAttitudes.html:10
 msgid ""
@@ -665,18 +755,29 @@ msgid "Very Much Trust"
 msgstr "Bardzo duże zaufanie"
 
 #: .\votingGame\models.py:26
+#, fuzzy
+#| msgid ""
+#| "A presentation by Marek Zmysłowski, Polish-born entrepreneur and co-"
+#| "founder of Rocket Internet, RTB House, OLX and GLOVO and author of the "
+#| "bestseller \"Chasing Black Unicorns\"."
 msgid ""
 "A presentation by Marek Zmysłowski, Polish-born entrepreneur and co-founder "
 "of Rocket Internet, RTB House, OLX and GLOVO."
 msgstr ""
-"Prezentacja Marka Zmysłowskiego, urodzonego w Polsce przedsiębiorcy i "
-"współzałożyciela Rocket Internet, RTB House, OLX oraz GLOVO."
+"Prezentacja Marka Zmysłowskiego, urodzonego w Polsce przedsiębiorcy i współzałożyciela"
+" Rocket Internet, RTB House, OLX oraz GLOVO."
+
+
 
 #: .\votingGame\models.py:27
 msgid "Online access to important standard textbooks via university WiFi."
-msgstr "Dostęp online do kolekcji ważnych standardowych podręczników w formie e-booków przez uniwersyteckie WiFi."
+msgstr ""
 
 #: .\votingGame\models.py:28
+#, fuzzy
+#| msgid ""
+#| "A number of scholarships (600-800 Zloty per student) for study abroad or "
+#| "internship abroad outside of funded programs (so-called free mover)."
 msgid ""
 "Scholarships (600-800 Zloty per student) for study or internship abroad "
 "outside of funded programs."
@@ -685,6 +786,10 @@ msgstr ""
 "zagraniczne poza programami finansowanymi."
 
 #: .\votingGame\models.py:29
+#, fuzzy
+#| msgid ""
+#| "Financial support of selected Study Circles to support their activities, "
+#| "among others publications and conferences."
 msgid ""
 "Financial support of selected Study Circles (e.g. for publications or "
 "conferences)."
@@ -716,6 +821,40 @@ msgid "Introduction"
 msgstr "Wstęp"
 
 #: .\votingGame\templates\votingGame\aIntro.html:10
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "        <b>For every participant</b> of today’s experiment, there are "
+#| "10-15 Zloty from public sources.\n"
+#| "        This money is earmarked for improving study conditions at the "
+#| "Poznan University of Economics and Business.\n"
+#| "        It can be spent on the following options:<br><br>\n"
+#| "        <ul>\n"
+#| "            <li> A presentation by Marek Zmysłowski, Polish-born "
+#| "entrepreneur and co-founder of Rocket Internet,\n"
+#| "                RTB House, OLX and GLOVO and author of the bestseller "
+#| "\"Chasing Black Unicorns.\" </li><br>\n"
+#| "            <li> Access to a collection of important standard textbooks "
+#| "as ebooks accessible to all students\n"
+#| "                when logged in to the university WiFi.  </li><br>\n"
+#| "            <li> A number of scholarships (600-800 Zloty per student) for "
+#| "study abroad or internship abroad outside\n"
+#| "                of funded programs (so-called free mover). </li><br>\n"
+#| "            <li> Financial support of selected Study Circles to support "
+#| "their activities,\n"
+#| "                among others publications and conferences. </li><br>\n"
+#| "        </ul>\n"
+#| "        The question is: <b>What should the 10-15 Zloty per student be "
+#| "spent on?</b><br><br>\n"
+#| "\n"
+#| "        We randomly divided all participants in today’s experiments into "
+#| "three groups of about equal size. <br>\n"
+#| "        <b>Please do not communicate with each other when answering the "
+#| "upcoming questions.</b><br>\n"
+#| "        If you have problem, please raise your hand so the experimenter "
+#| "can help you.<br>\n"
+#| "\n"
+#| "    "
 msgid ""
 "\n"
 "        <b>For every participant</b> of today’s experiment, there are 10-15 "
@@ -752,11 +891,12 @@ msgstr ""
 "Uniwersytecie Ekonomicznym w Poznaniu.\n"
 "        Budżet może być wydany na nastepujące opcje:<br><br>\n"
 "        <ul>\n"
-"            <li> Prezentacja Marka Zmysłowskiego, urodzonego w Polsce "
-"przedsiębiorcy i współzałożyciela \n"
-"               Rocket Internet, RTB House, OLX i GLOVO. </li><br>\n"
-"            <li> Dostęp online do kolekcji ważnych standardowych "
-"podręczników w formie e-booków\n"
+"            <li> Prezentacja Marka Zmysłowskiego, "
+"urodzonego w Polsce przedsiębiorcy i współzałożyciela \n"
+"               Rocket Internet, RTB House, OLX i GLOVO."
+" </li><br>\n"
+"            <li> Dostęp online do kolekcji ważnych standardowych podręczników w formie"
+" e-booków\n"
 "                przez uniwersyteckie WiFi.  </li><br>\n"
 "            <li> Szereg stypendiów (600-800 zł na studenta) na studia lub "
 "praktyki zagraniczne \n"
@@ -772,8 +912,8 @@ msgstr ""
 "losowo na dwie grupy równej wielkości. <br>\n"
 "        <b> Proszę nie komunikować się ze sobą podczas odpowiadania na "
 "nadchodzące pytania.</b><br>\n"
-"        Jeśli masz problem, proszę podnieś rękę, aby prowadzący "
-"eksperymentator mógł Tobie pomóc.<br>\n"
+"        Jeśli masz problem, proszę podnieś rękę, aby prowadzący eksperymentator "
+"mógł Tobie pomóc.<br>\n"
 "\n"
 "    "
 
@@ -943,6 +1083,40 @@ msgid "President Decision"
 msgstr "Przewodniczący Parlamentu Studenckiego"
 
 #: .\votingGame\templates\votingGame\dTreatmentPresident.html:10
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "For the 10-15 Zloty per student in your group, we asked <i>Wiktoria "
+#| "Walkowiak</i> <b>the president</b> of the student council\n"
+#| "        at your university to make the decision on what the money is "
+#| "spent.\n"
+#| "        These were the options:<br><br>\n"
+#| "        <ul>\n"
+#| "            <li> A presentation by Marek Zmysłowski, Polish-born "
+#| "entrepreneur and co-founder of Rocket Internet,\n"
+#| "                RTB House, OLX and GLOVO and author of the bestseller "
+#| "\"Chasing Black Unicorns.\" </li><br>\n"
+#| "            <li> Access to a collection of important standard textbooks "
+#| "as ebooks accessible to all students\n"
+#| "                when logged in to the university WiFi.  </li><br>\n"
+#| "            <li> A number of scholarships (600-800 Zloty per student) for "
+#| "study abroad or internship abroad outside\n"
+#| "                of funded programs (so-called free mover). </li><br>\n"
+#| "            <li> Financial support of selected Study Circles to support "
+#| "their activities,\n"
+#| "                among others publications and conferences. </li><br>\n"
+#| "        </ul>\n"
+#| "        <br>The president <i>Wiktoria Walkowiak</i> decided as "
+#| "follows<br>\n"
+#| "        For every member of your group, 10-15 Zloty are spent on the "
+#| "following option:<br><br>\n"
+#| "\n"
+#| "        <b>A number of scholarships (600-800 Zloty per student) for study "
+#| "abroad or internship abroad\n"
+#| "            outside of funded programs (so-called free mover).</b>\n"
+#| "\n"
+#| "\n"
+#| "    "
 msgid ""
 "\n"
 "    For the 10-15 Zloty per student in your group, we asked <i>Wiktoria "
@@ -979,11 +1153,12 @@ msgstr ""
 "przypadającego na każdego uczestnika Twojej grupy.\n"
 "        Poniżej zaproponowane opcje:<br><br>\n"
 "        <ul>\n"
-"            <li> Prezentacja Marka Zmysłowskiego, urodzonego w Polsce "
-"przedsiębiorcy i współzałożyciela \n"
-"Rocket Internet, RTB House, OLX i GLOVO. </li><br>\n"
-"            <li> Dostęp online do kolekcji ważnych standardowych "
-"podręczników przez uniwersyteckie WiFi.\n"
+"            <li> Prezentacja Marka Zmysłowskiego, "
+"urodzonego w Polsce przedsiębiorcy i współzałożyciela \n"
+"Rocket Internet, RTB House, OLX i GLOVO."
+" </li><br>\n"
+"            <li> Dostęp online do kolekcji ważnych standardowych podręczników "
+"przez uniwersyteckie WiFi.\n"
 "               </li><br>\n"
 "            <li> Szereg stypendiów (600-800 zł na stydenta) na studia lub "
 "praktyki zagraniczne \n"
@@ -994,20 +1169,18 @@ msgstr ""
 "        </ul>\n"
 "        <br>Przewodnicząca Parlamentu <i>Wiktoria Walkowiak</i> zdecydowała "
 "następująco<br>\n"
-"        10-15 zł przypadające na każdego członka Twojej grupy przeznaczone "
-"zostanie  na następującą opcję:<br><br>\n"
+"        10-15 zł przypadające na każdego członka Twojej grupy przeznaczone zostanie "
+" "
+"na następującą opcję:<br><br>\n"
 "\n"
-"        <b>Szereg stypendiów (600-800 zł na studenta) na studia lub praktyki "
-"zagraniczne            poza programami finansowanymi.</b>\n"
+"        <b>Szereg stypendiów (600-800 zł na studenta) na studia lub "
+"praktyki zagraniczne            poza programami finansowanymi.</b>\n"
 "\n"
-"Uwaga: <b>Ta decyzja ma teraz realny wpływ. Na każdego studenta należącego "
-"do Twojej grupy,\n"
+"Uwaga: <b>Ta decyzja ma teraz realny wpływ. Na każdego studenta "
+"należącego do Twojej grupy,\n"
 "    10-15 zł będą wydane na opcję wymienioną powyżej.</b>\n"
 "\n"
 "    "
-
-#~ msgid "What is your study program"
-#~ msgstr "Wskaż fakultet studiów"
 
 #~ msgid "I would rather not to answer"
 #~ msgstr "Wolę nie odpowiadać"
