--- a/locale/pl/LC_MESSAGES/django.po
+++ b/locale/pl/LC_MESSAGES/django.po
@@ -816,7 +816,7 @@ msgstr "Wynik głosowania"
 #: .\votingGame\templates\votingGame\cVoteResult.html:12
 msgid ""
 "\n"
-"            Your group reached the following decision by majority voting."
+"            <b>Your group reached the following decision by majority voting.</b>"
 "<br>\n"
 "\n"
 "            For every member of your group, 10-15 Zloty are spent on the "
@@ -824,7 +824,7 @@ msgid ""
 "        "
 msgstr ""
 "\n"
-"                Wasza grupa większością głosów osiągnęła następującą decyzję:"
+"                <b>Wasza grupa większością głosów osiągnęła następującą decyzję</b>"
 "<br>\n"
 "\n"
 "                Budżet 10-15 zł. przypadające na każdego członka Twojej "
@@ -853,7 +853,7 @@ msgstr "Jest remis, dlatego będziemy głosować ponownie."
 #: .\votingGame\templates\votingGame\cVoteResult2.html:12
 msgid ""
 "\n"
-"                Your group reached the following decision by majority voting."
+"                <b>Your group reached the following decision by majority voting.</b>"
 "<br>\n"
 "\n"
 "                For every member of your group, 10-15 Zloty are spent on the "
@@ -861,7 +861,7 @@ msgid ""
 "            "
 msgstr ""
 "\n"
-"                Wasza grupa większością głosów osiągnęła następującą decyzję:"
+"                <b>Wasza grupa większością głosów osiągnęła następującą decyzję.</b>"
 "<br>\n"
 "\n"
 "                Budżet 10-15 zł przypadające na każdego członka Twojej "
@@ -959,7 +959,7 @@ msgid ""
 "        One member from your group will be selected randomly. The 10-15 "
 "Zloty of every group member is spent\n"
 "        on the option proposed by this randomly selected member.\n"
-"        The proposals of all other group members will be ignored. <br><br>\n"
+"        <b>The proposals of all other group members will be ignored.</b> <br><br>\n"
 "\n"
 "        Note: <b>The decision now has real-life consequences</b>.\n"
 "        The decision reached in your group will be executed. <b>For every "
@@ -979,7 +979,7 @@ msgstr ""
 "jak wydać 10-15 zł. na studenta. Jeden członek z Twojej grupy \n"
 "zostanie wybrany losowo. 10-15 zł. na każdego członka z Twojej grupy będą wydane \n"
 "na opcję zaproponowaną przez tego losowo wybranego członka.\n"
-"Propozycje wszystkich pozostałych członków grupy będą ignorowane. <br><br>\n"
+"<b>Propozycje wszystkich pozostałych członków grupy będą ignorowane.</b> <br><br>\n"
 "\n"
 "        Uwaga: <b>Decyzja ma teraz realne konsekwencje</b>. \n"
 "        Decyzja podjęta w waszej grupie zostanie wykonana.\n"
@@ -999,14 +999,14 @@ msgstr "Wynik"
 #: .\votingGame\templates\votingGame\eTreatmentDictatorResult.html:11
 msgid ""
 "\n"
-"        The randomly chosen group member decided as follows.<br>\n"
+"        <b>The randomly chosen group member decided as follows (the proposals of all other group members were ignored).</b><br>\n"
 "\n"
 "        For every member of your group, 10-15 Zloty are spent on the "
 "following option:\n"
 "    "
 msgstr ""
 "\n"
-"        Losowo wybrany członek grupy podjął następującą decyzję."
+"        <b>Losowo wybrany członek grupy podjął następującą decyzję (propozycje wszystkich pozostałych członków grupy zostały zignorowane).</b>"
 "<br>\n"
 "\n"
 "                Budżet 10-15 zł. przypadające na każdego członka Twojej "
