update polish translation and change all buttons to polish

--- a/locale/pl/LC_MESSAGES/django.po
+++ b/locale/pl/LC_MESSAGES/django.po
@@ -119,7 +119,7 @@ msgid ""
 "            A few minutes ago, you were informed that 10 -15 Zloty per "
 "member in your group will be spent on\n"
 "            the following option:<br><br>\n"
-"            <i>%(last_vote_result)s</i><br><br>\n"
+"            <b><i>%(last_vote_result)s</i></b><br><br>\n"
 "            The exact amount of money spent this way depends on your "
 "performance in the upcoming coinflip task. <br>\n"
 "\n"
@@ -166,10 +166,10 @@ msgid ""
 msgstr ""
 "\n"
 "        <p>\n"
-"            Przed chwilą zostałęś poinformowany, że 10-15 zł. na członka "
+"            Przed chwilą zostałęś poinformowany, że 10-15 zł. przypadające na każdego członka "
 "Twojej grupy zostanie przeznaczone na\n"
 "            następującą opcję:<br><br>\n"
-"            <i>%(last_vote_result)s</i><br><br>\n"
+"            <b><i>%(last_vote_result)s</i></b><br><br>\n"
 "            Ostateczna kwota wydana na ten cel zależy od tego, jak skuteczny "
 "będziesz w kolejnym zadaniu: w rzucie monetą. <br>\n"
 "\n"
@@ -187,9 +187,9 @@ msgstr ""
 "swojej głowie\n"
 "            i zapamietaj. Możesz wykonać jedynie jedno z dwóch możliwych "
 "przewidywań:<br>\n"
-"            “Przewiduje: ORZEŁ”<br>\n"
+"            “Przewiduje: <b>ORZEŁ</b>”<br>\n"
 "            Lub<br>\n"
-"            “Przewiduję: RESZKA”<br>\n"
+"            “Przewiduję: <b>RESZKA</b>”<br>\n"
 "        </p>\n"
 "\n"
 "        <p>\n"
@@ -199,15 +199,15 @@ msgstr ""
 "\n"
 "            <br> Jeśli właściwie przewidziałeś wynik 5 razy zgłoś 5.<br>\n"
 "            Jeśli właściwie przewidziałeś wynik 4 razy, zgłoś 4.<br>\n"
-"            Jeśli właściwie przewidziałeś wynik 3 razy, zgłoś 3; Jeśli "
-"właściwie przewidziałeś wynik 2 razy, zgloś 2; jeśli właściwie przewidziałeś "
+"            Jeśli właściwie przewidziałeś wynik 3 razy, zgłoś 3.<br> Jeśli "
+"właściwie przewidziałeś wynik 2 razy, zgloś 2.<br> Jeśli właściwie przewidziałeś "
 "wynik 1 raz, zgłoś 1.<br>\n"
-"            Jeśli nie przewidziełaś wyniku żadnego z 5 rzutów , wówczas "
+"            Jeśli nie przewidziałeś wyniku żadnego z 5 rzutów , wówczas "
 "zgłoś 0.<br>\n"
 "\n"
 "            <br><b>Tylko pierwsze 5 rzutów monetą zostanie zaliczone.</"
 "b><br>\n"
-"            Pierwszy rzut nastąpi po kliknięciu na \"Rzuć monetą\" guzik "
+"            Pierwszy rzut nastąpi po kliknięciu na guzik \"RZUĆ MONETĄ\" "
 "(wyłączając przejścia między ekranami).\n"
 "        </p>\n"
 "\n"
@@ -242,12 +242,12 @@ msgid ""
 msgstr ""
 "\n"
 "        <p> <b>Wykonaj przewidywanie w Twojej głowie i rzuć monetą (klikajac "
-"na guzik\"Rzuć monetą\") teraz,\n"
+"na guzik \"Rzuć monetą\"). <br> Teraz,\n"
 "            powtórz ten proces w sumie 5 razy.</b> <br><br>\n"
 "            Zgłoś swój wynik używając formularza poniżej. Twoja skuteczność "
 "w zadaniu z rzutem monetą determinuje\n"
-"            twoja indywidualna korzyść finansową z eksperymentu i wysokość "
-"Twojego wkładuw finansowanie celu: <br>\n"
+"            twoją indywidualną korzyść finansową z eksperymentu i wysokość "
+"Twojego wkładu w finansowanie celu poniżej wskazanego: <br>\n"
 "            <i>%(last_vote_result)s</i>\n"
 "        </p>\n"
 "    "
@@ -280,9 +280,9 @@ msgstr ""
 "        <p>\n"
 "            Dziękujemy za udział w eksperymencie.<br>\n"
 "            Zachowaj swoją kartę. Będziesz jej potrzebował przy "
-"wypłacieindywidualnego wynagrodzenia z eksperymentu.\n"
+"wypłacie indywidualnego wynagrodzenia z eksperymentu.\n"
 "            Możesz odebrać swoje wynagrodzenie [data, miejsce].\n"
-"            Wystarczy, że pojawisz się z kartą i podpiszesz rachunekwypłaty "
+"            Wystarczy, że pojawisz się z kartą i podpiszesz rachunek wypłaty "
 "gotówki.\n"
 "        </p>\n"
 "    "
@@ -321,7 +321,7 @@ msgstr "Czujny"
 
 #: .\postsurvey\models.py:58 .\presurvey\models.py:60
 msgid "Afraid"
-msgstr "Obawiającysię"
+msgstr "Obawiający się"
 
 #: .\postsurvey\models.py:59 .\presurvey\models.py:61
 msgid "Active"
@@ -329,7 +329,7 @@ msgstr "Aktywny"
 
 #: .\postsurvey\templates\postsurvey\aPanas.html:6
 msgid "How do you feel at <b>this moment</b> ?"
-msgstr "Jak się czujesz w <b>tym momencie</b>?"
+msgstr "Jak się czujesz w <b>tym momencie</b>. Wskaż dla wszystkich.?"
 
 #: .\postsurvey\templates\postsurvey\aPanas.html:14
 #: .\presurvey\templates\presurvey\cPanas.html:14
@@ -476,16 +476,15 @@ msgid ""
 msgstr ""
 "\n"
 "        Dziś zapraszamy Ciebie do wzięcia udziału w eksperymencie "
-"ekonomicznym. Ten eksperyment jest częścią badania naukowego, projektu\n"
+"ekonomicznym. Ten eksperyment jest częścią badania naukowego\n"
 "        prowadzonego przez studentów Szkoły Doktorskiej Uniwersytetu "
 "Ekonomicznego  w Poznaniu. W sumie\n"
 "        w badaniu będzie uczestniczyć 500-600 studentów. Wszystkie sesje "
 "będą miały miejsce w marcu 2023.<br>\n"
 "\n"
-"        <br>Poprzez udział w eksperymencie, wspierasz ich badania.<br>\n"
 "\n"
 "        Ten eksperyment zajmie około <b>20 minut</b>.<br>\n"
-"        Każdy uczestnik biorący udział w eksperymencie który odpowie na "
+"        Każdy uczestnik biorący udział w eksperymencie, który odpowie na "
 "wszystkie pytania otrzyma wynagrodzenie <b>w wysokości 5 zł.</b><br>\n"
 "        Ponadto istnieje <b>szansa, aby zarobić 5 zł dodatkowo</b> podczas "
 "eksperymentu.<br>\n"
@@ -523,7 +522,7 @@ msgstr ""
 
 #: .\presurvey\templates\presurvey\cPanas.html:6
 msgid "How do you feel at <b>this moment</b>?"
-msgstr "Jak się czujesz <b>w tym momencie</b>?"
+msgstr "Jak się czujesz <b>w tym momencie</b>. Wskaż dla wszystkich."
 
 #: .\presurvey\templates\presurvey\dHypoEx1.html:6
 msgid "Hypothetical exercise"
@@ -563,12 +562,12 @@ msgstr ""
 "uczelni. \n"
 "        Można je wydać na następujące opcje:<br>\n"
 "    <br>\n"
-"    (I)     Dodatkowe środki na coroczny konkurs na najlepszą pracę magisterską lub licencjacką <br><br>\n"
+"    (I)     Dodatkowe środki na coroczny konkurs na najlepszą pracę magisterską lub licencjacką. <br><br>\n"
 "    (II)   Szereg stypendiów (800-1000 zł. na studenta) na studia lub "
 "praktyki zagraniczne. <br><br>\n"
 "    (III)    Dostęp online do kolekcji ważnych standardowych podręczników w "
 "formie e-booków przez uniwersyteckie WiFi. <br><br>\n"
-"    (IV)  \tWsparcie finansowe dla kół naukowych.<br><br>\n "
+"    (IV)  \tWsparcie naukowe dla wybranych kół naukowych.<br><br>\n "
 "\n"
 "<br><b>Jak w Twojej ocenie te pieniądze powinny być dystrybuowane pomiędzy "
 "te opcje (w procentach?)</b><br>\n"
@@ -600,10 +599,10 @@ msgid ""
 msgstr ""
 "\n"
 "        Filozof Immanuel Kant (1724-1804) zaproponował znany imperatyw "
-"kategoryczny: An\n"
-"        Jednostka powinna  <i>“[…] Postępuj wedle takiej tylko zasady, "
+"kategoryczny: \n"
+"        <i>“[…] Postępuj wedle takiej tylko zasady, "
 "co do której mógłbyś jednocześnie chcieć,"
-"        aby stała się prawem powszechnym.”</i> (Tatarkiewicz, Historia filozofii),"
+"        aby stała się prawem powszechnym.”</i> (Tatarkiewicz, Historia filozofii), "
 "co oznacza, że jednostka powinna zachowywać się w określony sposób tylko jeśli \n"
 "        życzy sobie, aby wszyscy inni zachowywali się również w ten sposób. "
 "<br>\n"
@@ -652,7 +651,7 @@ msgid ""
 "Additional funds for the annual competition for the best master's or "
 "bachelor's thesis"
 msgstr ""
-"Dodatkowe środki na coroczny konkurs na najlepszą pracę magisterską lub licencjacką"
+"Dodatkowe środki na coroczny konkurs na najlepszą pracę magisterską lub licencjacką."
 
 #: .\votingGame\models.py:27
 msgid ""
@@ -664,13 +663,13 @@ msgstr ""
 #: .\votingGame\models.py:28
 msgid "Online Access to important standard textbooks via university WiFi"
 msgstr ""
-"Dostęp online do kolekcji ważnych standardowych podręczników"
+"Dostęp online do kolekcji ważnych standardowych podręczników "
 "przez uniwersyteckie WiFi."
 
 #: .\votingGame\models.py:29
 msgid "Financial support for selected Study Circles "
 msgstr ""
-"Wsparcie finansowe wybranych kół naukowych. "
+"Wsparcie naukowe dla wybranych kół naukowych. "
 " "
 
 #: .\votingGame\models.py:30
@@ -737,26 +736,26 @@ msgstr ""
 "Uniwersytecie Ekonomicznym w Poznaniu.\n"
 "        Budżet może być wydany na nastepujące opcje:<br><br>\n"
 "        <ul>\n"
-"            <li> Dodatkowe środki na coroczny konkurs na najlepszą pracę magisterską lub licencjacką"
+"            <li> Dodatkowe środki na coroczny konkurs na najlepszą pracę magisterską lub licencjacką."
 " \n"
 "              </li><br>\n"
 "            <li> Szereg stypendiów (800-1000 zł. na studenta) na studia lub "
-"praktyki zagraniczne </li><br>\n"
+"praktyki zagraniczne. </li><br>\n"
 "            <li> Dostęp online do kolekcji ważnych standardowych podręczników "
 " przez uniwersyteckie WiFi. </li><br>\n"
-"            <li> Wsparcie finansowe wybranych kół naukowych "
+"            <li> Wsparcie naukowe dla wybranych kół naukowych. "
 "\n"
 "          </li><br>\n"
 "        </ul>\n"
-"        Pytanie brzmi następująco: <b> Na który z powyższych celów powinny "
+"        Pytanie brzmi następująco: <b> Na który z powyższych celów powinno "
 "być wydane 10-15 zł. przypadające na każdego studenta?</b><br><br>\n"
 "\n"
 "        Wszystkich uczestników dzisiejszych eksperymentów podzieliliśmy "
-"losowo na dwie grupy równej wielkości. <br>\n"
+"losowo na trzy grupy równej wielkości. <br>\n"
 "        <b> Proszę nie komunikować się ze sobą podczas odpowiadania na "
 "nadchodzące pytania.</b><br>\n"
 "        Jeśli masz problem, proszę podnieś rękę, aby prowadzący "
-"eksperymentator mógł Tobie pomóc.<br>\n"
+"eksperyment mógł Tobie pomóc.<br>\n"
 "\n"
 "    "
 
@@ -790,7 +789,7 @@ msgstr ""
 "podejmowana jest w głosowaniu większościowym. <br><br>\n"
 "\n"
 "    Opcja, która otrzyma absolutną większość głosów zostaje wybrana i   "
-"10-15 zł należące do każdego członka grupy zostanie .\n"
+"10-15 zł przypadające na każdego członka grupy zostanie \n"
 "    wydane na tę opcję. W przypadku braku większości, dwie opcje,  które "
 "otrzymają najwięcej głosów\n"
 "    przejdą do drugiej rundy wyborów. W przypadku remisu (małe "
@@ -798,12 +797,12 @@ msgstr ""
 "\n"
 "    Note: <b>Uwaga: Decyzja ma teraz realne konsekwencje. </b> Decyzja "
 "podjęta w waszej grupie zostanie wykonana.\n"
-"    <b>Za każdego ucznia uczestniczącego w waszej grupie 10-15 zł na osobę "
-"zostanie wydane na opcję, \n"
-"    która otrzyma większość.</b><br>\n"
+"    <b>Kwota w wysokości 10-15 zł przypadająca na każdego "
+"członka Waszej grupy zostanie wydana na opcję, \n"
+"    która otrzyma wiekszość.</b><br>\n"
 "    Teraz proszę oddać swój głos. <br><br>\n"
 "\n"
-"    Na co w Twojej ocenie należy wydać te 10-15 zł przypadające na członka "
+"    Na co w Twojej ocenie należy wydać 10-15 zł przypadające na członka "
 "tej grupy?<br><br>\n"
 "\n"
 "    "
@@ -827,7 +826,7 @@ msgstr ""
 "                <b>Wasza grupa większością głosów osiągnęła następującą decyzję</b>"
 "<br>\n"
 "\n"
-"                Budżet 10-15 zł. przypadające na każdego członka Twojej "
+"                Budżet 10-15 zł. przypadający na każdego członka Twojej "
 "grupy przeznacza się na następującą opcję:\n"
 "            "
 
@@ -841,8 +840,8 @@ msgid ""
 msgstr ""
 "\n"
 "            <b>Uwaga: Ta decyzja ma teraz realny wpływ. </b><br>\n"
-"            <b>Na każdego studenta należącego do Twojej grupy,"
-"10-15 zł. będą wydane na opcję wymienioną powyżej. </b>\n"
+"            <b>Kwota 10-15 zł. przypadająca na każdego członka "
+"Twojej grupy zostanie wydana na opcję wymienioną powyżej.</b>\n"
 "            "
 
 #: .\votingGame\templates\votingGame\cVoteResult.html:24
@@ -886,7 +885,7 @@ msgstr ""
 
 #: .\votingGame\templates\votingGame\dTreatmentPresident.html:6
 msgid "Vice President Decision"
-msgstr "Decyzja wiceprezydenta"
+msgstr "Wiceprzewodniczącego Parlamentu Studenckiego"
 
 #: .\votingGame\templates\votingGame\dTreatmentPresident.html:10
 msgid ""
@@ -929,7 +928,7 @@ msgstr ""
 "praktyki zagraniczne </li><br>\n"
 "            <li> Dostęp online do kolekcji ważnych standardowych podręczników "
 " przez uniwersyteckie WiFi. </li><br>\n" 
-"            <li> Wsparcie finansowe wybranych kół naukowych </li><br>\n"
+"            <li> Wsparcie naukowe dla wybranych kół naukowych. </li><br>\n"
 "        </ul>\n"
 "        <br>Wiceprzewodnicząca Parlamentu <i>Aleksandra Matusiak</i> zdecydowała "
 "następująco<br>\n"
@@ -975,19 +974,19 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"    W Twojej grupie każdy członek jest proszony o zaproponowanie,"
-"jak wydać 10-15 zł. na studenta. Jeden członek z Twojej grupy \n"
+"    W Twojej grupie każdy członek jest proszony o zaproponowanie "
+"jak wydać 10-15 zł. przypadające na studenta. Jeden członek z Twojej grupy \n"
 "zostanie wybrany losowo. 10-15 zł. na każdego członka z Twojej grupy będą wydane \n"
 "na opcję zaproponowaną przez tego losowo wybranego członka.\n"
 "<b>Propozycje wszystkich pozostałych członków grupy będą ignorowane.</b> <br><br>\n"
 "\n"
 "        Uwaga: <b>Decyzja ma teraz realne konsekwencje</b>. \n"
 "        Decyzja podjęta w waszej grupie zostanie wykonana.\n"
-"    <b>Za każdego ucznia uczestniczącego w Twojej grupie 10-15 zł. na osobę "
-"zostanie wydane na opcję zaproponowaną przez losowo wybranego członka.</b><br><br>\n"
+"    <b>Kwota 10-15 zł. przypadająca na każdego członka "
+"Twojej grupy zostanie wydana na opcję wymienioną powyżej.</b><br><br>\n"
 " \n"
 "    Teraz proszę oddać swoją propozycję: <br>\n"
-"    Na co należy wydać te 10-15 zł. przypadające na każdego członka "
+"    Na co należy wydać 10-15 zł. przypadające na każdego członka "
 "Twojej grupy?<br><br>\n"
 "\n"
 "    "
@@ -1009,7 +1008,7 @@ msgstr ""
 "        <b>Losowo wybrany członek grupy podjął następującą decyzję (propozycje wszystkich pozostałych członków grupy zostały zignorowane).</b>"
 "<br>\n"
 "\n"
-"                Budżet 10-15 zł. przypadające na każdego członka Twojej "
+"                Budżet 10-15 zł. przypadający na każdego członka Twojej "
 "grupy  przeznacza się na następującą opcję:\n"
 "            "
 
@@ -1023,8 +1022,8 @@ msgid ""
 msgstr ""
 "\n"
 "        <b>Uwaga: Decyzja ma teraz realne konsekwencje. </b><br>\n"
-"        <b>Na każdego studenta należącego do Twojej grupy, "
-"10-15 zł. będą wydane na opcję wymienioną powyżej. </b>\n"
+"        <b>Kwota 10-15 zł. przypadająca na każdego członka Twojej "
+"grupy zostanie wydana na opcję wymienioną powyżej.</b>\n"
 "    "
 
 #~ msgid "University council"
