change minor polish translation and add % to input fields

--- a/locale/pl/LC_MESSAGES/django.po
+++ b/locale/pl/LC_MESSAGES/django.po
@@ -567,7 +567,7 @@ msgstr ""
 "praktyki zagraniczne. <br><br>\n"
 "    (III)    Dostęp online do kolekcji ważnych standardowych podręczników w "
 "formie e-booków przez uniwersyteckie WiFi. <br><br>\n"
-"    (IV)  \tWsparcie naukowe dla wybranych kół naukowych.<br><br>\n "
+"    (IV)  \tWsparcie finansowe dla wybranych kół naukowych.<br><br>\n "
 "\n"
 "<br><b>Jak w Twojej ocenie te pieniądze powinny być dystrybuowane pomiędzy "
 "te opcje (w procentach?)</b><br>\n"
@@ -669,7 +669,7 @@ msgstr ""
 #: .\votingGame\models.py:29
 msgid "Financial support for selected Study Circles "
 msgstr ""
-"Wsparcie naukowe dla wybranych kół naukowych. "
+"Wsparcie finansowe dla wybranych kół naukowych. "
 " "
 
 #: .\votingGame\models.py:30
@@ -743,7 +743,7 @@ msgstr ""
 "praktyki zagraniczne. </li><br>\n"
 "            <li> Dostęp online do kolekcji ważnych standardowych podręczników "
 " przez uniwersyteckie WiFi. </li><br>\n"
-"            <li> Wsparcie naukowe dla wybranych kół naukowych. "
+"            <li> Wsparcie finansowe dla wybranych kół naukowych. "
 "\n"
 "          </li><br>\n"
 "        </ul>\n"
@@ -795,7 +795,7 @@ msgstr ""
 "    przejdą do drugiej rundy wyborów. W przypadku remisu (małe "
 "prawdopodobieństwo),   jedna z dwóch opcji zostanie wybrana losowo.<br><br>\n"
 "\n"
-"    Note: <b>Uwaga: Decyzja ma teraz realne konsekwencje. </b> Decyzja "
+"    <b>Uwaga: Decyzja ma teraz realne konsekwencje. </b> Decyzja "
 "podjęta w waszej grupie zostanie wykonana.\n"
 "    <b>Kwota w wysokości 10-15 zł przypadająca na każdego "
 "członka Waszej grupy zostanie wydana na opcję, \n"
@@ -928,7 +928,7 @@ msgstr ""
 "praktyki zagraniczne </li><br>\n"
 "            <li> Dostęp online do kolekcji ważnych standardowych podręczników "
 " przez uniwersyteckie WiFi. </li><br>\n" 
-"            <li> Wsparcie naukowe dla wybranych kół naukowych. </li><br>\n"
+"            <li> Wsparcie finansowe dla wybranych kół naukowych. </li><br>\n"
 "        </ul>\n"
 "        <br>Wiceprzewodnicząca Parlamentu <i>Aleksandra Matusiak</i> zdecydowała "
 "następująco<br>\n"
@@ -974,20 +974,14 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"    W Twojej grupie każdy członek jest proszony o zaproponowanie "
-"jak wydać 10-15 zł. przypadające na studenta. Jeden członek z Twojej grupy \n"
-"zostanie wybrany losowo. 10-15 zł. na każdego członka z Twojej grupy będą wydane \n"
-"na opcję zaproponowaną przez tego losowo wybranego członka.\n"
-"<b>Propozycje wszystkich pozostałych członków grupy będą ignorowane.</b> <br><br>\n"
-"\n"
-"        Uwaga: <b>Decyzja ma teraz realne konsekwencje</b>. \n"
-"        Decyzja podjęta w waszej grupie zostanie wykonana.\n"
-"    <b>Kwota 10-15 zł. przypadająca na każdego członka "
-"Twojej grupy zostanie wydana na opcję wymienioną powyżej.</b><br><br>\n"
-" \n"
-"    Teraz proszę oddać swoją propozycję: <br>\n"
-"    Na co należy wydać 10-15 zł. przypadające na każdego członka "
-"Twojej grupy?<br><br>\n"
+"    W Twojej grupie każdy członek został poproszony o wskazanie preferowanego celu wydatkowania "
+"10-15 zł. przypadającego na każdego studenta z grupy. <br><br>"
+"Jeden członek z Twojej grupy zostanie wybrany losowo. Budżet 10-15 zł. przypadające na każdego członka tej "
+" grupy zostanie wydany na opcję wskazaną przez tego jednego studenta wybranego losowo. Inne propozycje zostaną zignorowane.<br><br>"
+"        Uwaga: <b>Ta decyzja ma teraz realne konsekwencje. Decyzja podjęta w tej grupie będzie wyegzekwowana. "
+"Budżet 10-15 zł. przypadające na każdego członka tej grupy zostanie wydana na propozycję jednego, losowo wybranego członka tej grupy.</b><br><br>"
+"    Teraz proszę wskaż swoją propozycję. <br>\n"
+"    Jak budżet 10-15 zł. przypadające na studenta powinno zostać wydane?<br><br>\n "
 "\n"
 "    "
 
