delete explanation for Kant's quote

--- a/locale/pl/LC_MESSAGES/django.po
+++ b/locale/pl/LC_MESSAGES/django.po
@@ -605,9 +605,7 @@ msgstr ""
 "kategoryczny: \n"
 "        <i>“[…] Postępuj wedle takiej tylko zasady, "
 "co do której mógłbyś jednocześnie chcieć,"
-"        aby stała się prawem powszechnym.”</i> (Tatarkiewicz, Historia filozofii), "
-"co oznacza, że jednostka powinna zachowywać się w określony sposób tylko jeśli \n"
-"        życzy sobie, aby wszyscy inni zachowywali się również w ten sposób. "
+"        aby stała się prawem powszechnym.”</i> (Tatarkiewicz, Historia filozofii) "
 "<br>\n"
 "\n"
 "        <br><b>Co o tym sądzisz? W jakim stopniu należy kierować się tą "
