minor changes to translation file

--- a/locale/pl/LC_MESSAGES/django.po
+++ b/locale/pl/LC_MESSAGES/django.po
@@ -284,7 +284,7 @@ msgstr ""
 "            Dziękujemy za udział w eksperymencie.<br>\n"
 "            Zachowaj swoją kartę. Będziesz jej potrzebował przy "
 "wypłacie indywidualnego wynagrodzenia z eksperymentu.\n"
-"            Możesz odebrać swoje wynagrodzenie [data, miejsce].\n"
+"            Data i godzina są wyświetlane na indywidualnym kodzie QR.\n"
 "            Wystarczy, że pojawisz się z kartą i podpiszesz rachunek wypłaty "
 "gotówki.\n"
 "        </p>\n"
@@ -796,8 +796,8 @@ msgstr ""
 "    przejdą do drugiej rundy wyborów. W przypadku remisu (małe "
 "prawdopodobieństwo),   jedna z dwóch opcji zostanie wybrana losowo.<br><br>\n"
 "\n"
-"    <b>Uwaga: Decyzja ma teraz realne konsekwencje. </b> Decyzja "
-"podjęta w waszej grupie zostanie wykonana.\n"
+"    <b>Uwaga: Decyzja ma teraz realne konsekwencje. Decyzja "
+"podjęta w waszej grupie zostanie wykonana.</b>\n"
 "    <b>Kwota w wysokości 10-15 zł przypadająca na każdego "
 "członka Waszej grupy zostanie wydana na opcję, \n"
 "    która otrzyma wiekszość.</b><br>\n"
